Adding a browser panel

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -39,3 +39,18 @@ a
     font-size: 100%
     display: inline
 
+//Browser
+.browser
+  padding: 0
+  .browser-nav-bar
+    background: #ccc
+    height:30px
+    list-style: none
+    overflow:hidden
+    padding:0
+    margin:0
+    li
+      float: left
+      input.browser-url
+        margin-top: 4px
+        width: 300px
