--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -47,3 +47,21 @@ a {
   font-size: 100%;
   display: inline;
 }
+.browser {
+  padding: 0;
+}
+.browser .browser-nav-bar {
+  background: #ccc;
+  height: 30px;
+  list-style: none;
+  overflow: hidden;
+  padding: 0;
+  margin: 0;
+}
+.browser .browser-nav-bar li {
+  float: left;
+}
+.browser .browser-nav-bar li input.browser-url {
+  margin-top: 4px;
+  width: 300px;
+}
