--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -39,6 +39,10 @@ a
     font-size: 100%
     display: inline
 
+.console .terminal
+  background-color: transparent
+  font-size: 16px
+
 //Browser
 .browser
   padding: 0
