Fixing jQuery terminal styles and adding versions to packages

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,4 +1,4 @@
-doctype 5
+doctype html
 html
   head
     title= title
@@ -27,7 +27,7 @@ html
     script(src="javascripts/jquery.terminal-0.7.0.min.js")
     script(src="javascripts/jquery.jbrowser.js")
     script(src='/socket.io/socket.io.js')
-    script
+    script.
       //Ace Editor
       var editor = ace.edit("editor"), NW = {}, term;
       //Sockets
