--- a/views/index.jade
+++ b/views/index.jade
@@ -27,7 +27,7 @@ block content
       li
         a.browser-go-btn(href='#')
           img(src='./images/browser-go-btn.png', alt='Browser', height='32', width='32')
-    iframe.browser-page-container(src='./browser/index.html', frameborder='0', align='center', scrolling='yes', allowtransparency='false', height="100%", width="100%")
+    iframe.browser-page-container(src='./slides/index.html', frameborder='0', align='center', scrolling='yes', allowtransparency='false', height="100%", width="100%")
 
   .ui-layout-west
     h2 Ejercicio
