Adding smart correction

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -58,3 +58,18 @@ a
       input.browser-url
         margin-top: 4px
         width: 300px
+
+//Output
+#salida
+  padding:2px 5px
+  .res
+    font-weight:bold
+    text-decoration: underline
+
+.success
+  background: #64C364
+  border: 1px solid #ccc
+.failure
+  background: #FF6347
+  border: 1px solid #ccc
+  
