--- a/views/index.jade
+++ b/views/index.jade
@@ -14,7 +14,7 @@ block content
         span(style="padding:0 0 2px 20px")
           button#tedior Editor
           button#tterm Terminal
-          button#send Corregir
+          button.send Corregir
       span(style="float:right")
         img(src="./images/avatar.png",style="width: 26px;padding: 0 3px 3px 0; float:left;") 
         span(style="line-height: 28px;") Cristian Cortez
@@ -43,4 +43,5 @@ block content
     h2 Ejercicio
     p Escribir una función que retorne un "Hola Mundo"
     #salida
+    button.send(style="float: right;") Corregir
 
