Access ot browser scope inside the iframe

--- a/views/index.jade
+++ b/views/index.jade
@@ -36,7 +36,7 @@ block content
       li
         a.browser-go-btn(href='#')
           img(src='./images/browser-go-btn.png', alt='Browser', height='32', width='32')
-    iframe.browser-page-container(src='./slides/index.html', frameborder='0', align='center', scrolling='yes', allowtransparency='false', height="100%", width="100%")
+    iframe#navone.browser-page-container(src='./slides/index.html', frameborder='0', align='center', scrolling='yes', allowtransparency='false', height="100%", width="100%")
 
   .ui-layout-west
     iframe#video(src='//www.youtube.com/embed/LvvXfML-ELQ?enablejsapi=1', frameborder='0', width='400', height='300', allowfullscreen='')
