Sync actions with video

--- a/views/index.jade
+++ b/views/index.jade
@@ -39,9 +39,15 @@ block content
     iframe#navone.browser-page-container(src='./slides/index.html', frameborder='0', align='center', scrolling='yes', allowtransparency='false', height="100%", width="100%")
 
   .ui-layout-west
-    iframe#video(src='//www.youtube.com/embed/LvvXfML-ELQ?enablejsapi=1', frameborder='0', width='400', height='300', allowfullscreen='')
+    #player
     h2 Ejercicio
     p Escribir una función que retorne un "Hola Mundo"
     #salida
     button.send(style="float: right;") Corregir
+    #vid-info
+      #videoDuration
+      #videoCurrentTime
+      #bytesTotal
+      #startBytes
+      #bytesLoaded
 
