Adding first video, yay

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -222,16 +222,88 @@ html
       NW.tutorial.started = false;
       NW.tutorial.data = {
         //Video index is the main key
-        'LvvXfML-ELQ': {
+        'k9-9MQ5tqsc': {
             'actions': [{
-                'time': 2,
+                'time': 6,
                 'name' : 'eval',
                 'params': [
-                    'NW.browser.sendClick(".navigate-right")',
-                    'NW.browser.sendClick(".navigate-right")',
+                    'console.log("sobre mi")',
+                    'NW.browser.sendClick(".navigate-right")'
+                ]
+              },{
+                'time': 39,
+                'name' : 'eval',
+                'params': [
+                    'console.log("tengo una idea")',
+                    'NW.browser.sendClick(".navigate-right")'
+                ]
+              },{
+                'time': 46,
+                'name' : 'eval',
+                'params': [
+                    'console.log("que")',
                     'NW.browser.sendClick(".navigate-down")'
                 ]
               },{
+                'time': 55,
+                'name' : 'eval',
+                'params': [
+                    'console.log("motiv")',
+                    'NW.browser.sendClick(".navigate-down")'
+                ]
+              },{
+                'time': 102,
+                'name' : 'eval',
+                'params': [
+                    'console.log("como")',
+                    'NW.browser.sendClick(".navigate-right")'
+                ]
+              },{
+                'time': 105,
+                'name' : 'eval',
+                'params': [
+                    'console.log("sustentable")',
+                    'NW.browser.sendClick(".navigate-down")'
+                ]
+              },{
+                'time': 120,
+                'name' : 'eval',
+                'params': [
+                    'console.log("equipo")',
+                    'NW.browser.sendClick(".navigate-down")'
+                ]
+              },{
+                'time': 140,
+                'name' : 'eval',
+                'params': [
+                    'console.log("plataforma")',
+                    'NW.browser.sendClick(".navigate-down")'
+                ]
+              },{
+                'time': 151,
+                'name' : 'eval',
+                'params': [
+                    'console.log("diferenciacion")',
+                    'NW.browser.sendClick(".navigate-right")'
+                ]
+              },{
+                'time': 156,
+                'name' : 'eval',
+                'params': [
+                    'console.log("producto base")',
+                    'NW.browser.sendClick(".navigate-down")'
+                ]
+              },{
+                'time': 184,
+                'name' : 'eval',
+                'params': [
+                    'console.log("innovar")',
+                    'NW.browser.sendClick(".navigate-down")'
+                ]
+              }]
+         },
+        'bVbKNHghLZo': {
+            'actions': [{
                 'time': 4,
                 'name' : 'eval',
                 'params': [
@@ -339,7 +411,7 @@ html
         player = new YT.Player('player', {
           height: '300',
           width: '400',
-          videoId: 'LvvXfML-ELQ',
+          videoId: 'k9-9MQ5tqsc',
           events: {
             'onReady': onPlayerReady,
             'onStateChange': onPlayerStateChange
