--- a/views/index.jade
+++ b/views/index.jade
@@ -44,7 +44,7 @@ block content
     p Escribir una función que retorne un "Hola Mundo"
     #salida
     button.send(style="float: right;") Corregir
-    #vid-info(style="display: none")
+    #vid-info(style="display: block")
       #videoDuration
       #videoCurrentTime
       #bytesTotal
