Adding extra step for slide

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -287,10 +287,17 @@ html
                     'NW.browser.sendClick(".navigate-right")'
                 ]
               },{
-                'time': 156,
+                'time': 154,
                 'name' : 'eval',
                 'params': [
                     'console.log("producto base")',
+                    'NW.browser.sendClick(".navigate-down")'
+                ]
+              },{
+                'time': 170,
+                'name' : 'eval',
+                'params': [
+                    'console.log("producto aumentado")',
                     'NW.browser.sendClick(".navigate-down")'
                 ]
               },{
