Adding second video

--- a/views/index.jade
+++ b/views/index.jade
@@ -44,7 +44,16 @@ block content
     p Escribir una función que retorne un "Hola Mundo"
     #salida
     button.send(style="float: right;") Corregir
-    #vid-info(style="display: block")
+    br
+    ul#videoPlaylist
+      li
+        a.selected(href="#k9-9MQ5tqsc") Introduccion
+      li
+        a(href="#bVbKNHghLZo") Ejemplo de uso
+    ul#encuesta
+      li
+        a(href="https://docs.google.com/forms/d/135_wG9AFx7RmPNLgujyskUOTKfFXQNc9egNlH_j1gMg/viewform?usp=send_form",style="text-decoration: underline;paddin:0 20px;",target="_blank") Completa la encuesta!! Click aqui!
+    #vid-info(style="display: none")
       #videoDuration
       #videoCurrentTime
       #bytesTotal
